[gd_scene load_steps=5 format=3 uid="uid://cq85s1sgkavqx"]

[ext_resource type="Script" path="res://LightPoster.gd" id="1_y0bxy"]
[ext_resource type="Texture2D" uid="uid://b3vhshj6tvc4f" path="res://Assets/Texture assets/Chapter 2/UI_LightGameInstructionsPoster.png" id="2_t7ppv"]
[ext_resource type="FontFile" uid="uid://dd7wuh3vhdjhu" path="res://Assets/Fonts/Rosarivo/Rosarivo-Regular.ttf" id="3_6ns3q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0s7ys"]
radius = 142.372

[node name="LightPoster" type="Area2D"]
position = Vector2(84, 3)
script = ExtResource("1_y0bxy")

[node name="UiLightGameInstructionsPoster" type="Sprite2D" parent="."]
position = Vector2(346.4, 351.39)
scale = Vector2(0.035, 0.035)
texture = ExtResource("2_t7ppv")

[node name="Interactionarea" type="Area2D" parent="."]
position = Vector2(346.401, 351.39)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactionarea"]
shape = SubResource("CircleShape2D_0s7ys")

[node name="Panel" type="Panel" parent="Interactionarea"]
z_index = 2
z_as_relative = false
offset_left = -102.0
offset_top = -64.0
offset_right = 105.0
offset_bottom = -24.0
metadata/_edit_use_anchors_ = true

[node name="interaction_label" type="Label" parent="Interactionarea/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -78.0
offset_top = -1.0
offset_right = 81.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_6ns3q")
theme_override_font_sizes/font_size = 25
text = "[E] to Interact"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="Interactionarea" to="." method="_on_interactionarea_body_entered"]
[connection signal="body_exited" from="Interactionarea" to="." method="_on_interactionarea_body_exited"]
